--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "standard": "^10"
   },
   "dependencies": {
+    "chalk": "^2.3.0",
+    "execa": "^0.9.0",
+    "fs-extra": "^5.0.0",
+    "giturl": "^1.0.0",
     "sade": "^1.3.1"
   }
 }
