--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
+    "debug": "^3.1.0",
     "execa": "^0.9.0",
     "fs-extra": "^5.0.0",
     "giturl": "^1.0.0",
