--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tidy-repo",
   "version": "0.0.0",
+  "description": "Better git clone. Keep repository directory neat and tidy.",
+  "license": "MIT",
+  "repository": "viko16/tidy-repo",
   "bin": {
     "repo": "index.js"
   },
