--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "repo": "index.js"
   },
   "scripts": {
-    "lint": "standard"
+    "lint": "standard",
+    "release": "npm run lint && standard-version"
   },
   "devDependencies": {
-    "standard": "^10"
+    "standard": "^10",
+    "standard-version": "^4.3.0"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
+    "chalk": "^2.3.1",
     "debug": "^3.1.0",
     "execa": "^0.9.0",
     "fs-extra": "^5.0.0",
     "giturl": "^1.0.0",
-    "sade": "^1.3.1"
+    "sade": "^1.3.2"
   }
 }
