--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.1",
+    "clipboardy": "^1.2.3",
     "debug": "^3.1.0",
     "execa": "^0.9.0",
     "fs-extra": "^5.0.0",
